manifests/ingress/nginx-ingress-controller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: kube-system
spec:
  clusterIP: None
  # type: NodePort
  # externalTrafficPolicy: Local
  # sessionAffinity: ClientIP
  ports:
  - name: http
    port: 8080
    # nodePort: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    # nodePort: 443
    targetPort: 443
    protocol: TCP
  selector:
    k8s-app: nginx-ingress-lb
